--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,10 @@
 */.idea/tasks.xml
 */.idea/
 
+*.aux
+*.fdb_latexmk
+*.log
+*.gz
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
